update styling and fix bug styling on safari

--- a/style.css
+++ b/style.css
@@ -29,6 +29,7 @@ html {
     height: 100%;
     z-index: 100;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.6);
     transition: 0.3s;
   }
@@ -112,6 +113,7 @@ html {
     padding: 1.5rem;
     border-radius: 16px;
     backdrop-filter: blur(10px);
+    -webkit-backdrop-filter: blur(10px);
     background: rgba(255, 255, 255, 0.6);
   }
 
@@ -145,6 +147,7 @@ html {
   height: 8vh;
   background: rgba(255, 255, 255, 0.5);
   backdrop-filter: blur(14px);
+  -webkit-backdrop-filter: blur(14px);
   display: flex;
   flex-direction: row;
   z-index: 10;
